# modern_colorthief

./: .gitattributes  .gitignore  .readthedocs.yml  AGENTS.md  Cargo.toml  Cross.toml  DIFFERENCES.md  Dockerfile.aarch64-php  Dockerfile.aarch64-unknown-linux-gnu  LICENSE  LICENSE.colorthief  LLMs.txt  PLANS.md  README.md  modern_colorthief.pyi  package.json  pyproject.toml  renovate.json  test.py  tsconfig.json  typedoc.json
.agents/skills/: github-cd.md  github-cicd.md  oxidize-rb-docs.md
.cargo/: config.toml
.claude/rules/: ci-verification.md
.claude/skills/: swc-build.md  wasm-pack.md
.github/: dependabot.yml
.github/scripts/: generate_changelog_entry.py  setup_vulkan_macos.sh  update_aur.py
.github/workflows/: CI.yaml  CI.yml  aur_publish.yml  check-all.yaml  core-ci.yaml  diagnostic-php.yaml  diagnostic-ruby.yaml  fuzz.yml  gpu-ci.yaml  jvm-ci.yaml  node-ci.yaml  php-ci.yaml  publish.yml  python-ci.yaml  release.yaml  ruby-ci.yaml  ruby-gpu.yaml  test.yaml  update-changelog.yaml  wasm-ci.yaml
aur/modern-colorthief/: PKGBUILD
aur/modern-colorthief-bin/: PKGBUILD
aur/modern-colorthief-git/: PKGBUILD
bench/: bench.py
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core_cpu/: Cargo.toml
crates/core_gpu/: Cargo.toml
crates/core_wasm/: Cargo.toml  build.rs  package-lock.json  package.json  tsconfig.json
crates/core_wasm/src/: helper.ts  lib.rs  shader.wgsl  webgpu.rs
crates/core_webgpu/: Cargo.toml  build.rs  package-lock.json  package.json
crates/core_webgpu/src/: helper.ts  lib.rs  shader.wgsl  webgpu.rs
crates/fuzz/: .gitignore  Cargo.toml
crates/fuzz/fuzz_targets/: color_extract.rs  cpu_gpu_consistency.rs  palette_extract.rs
crates/fuzz/src/: lib.rs  tests.rs
crates/jvm-bindings/: .gitignore  Cargo.toml  llms.txt
crates/jvm-bindings-gpu/: .gitignore  Cargo.toml
crates/node-bindings/: .gitignore  Cargo.toml  deno.json  esbuild.config.js  index.d.ts  index.js  index.ts  llms.txt  native.js  native.ts  package-lock.json  package.json  tsconfig.json  tsdown.config.ts  vite.config.ts  vitest.config.ts
crates/node-bindings-gpu/: Cargo.toml  package-lock.json  package.json  vitest.config.ts
crates/node-bindings-wasm/: Cargo.toml  package-lock.json  package.json  vite.config.ts
crates/node-bindings-wasm/src/: lib.rs
crates/node-bindings-wasm/tests/: node.test.js
crates/node-bindings/artifacts/: index.d.ts  index.js  modern_colorthief.win32-x64-msvc.node
crates/node-bindings/examples/: test.js
crates/node-bindings/src/: lib.rs
crates/node-bindings/tests/: test_api.ts  test_compat.ts  test_concurrent.ts  test_deduplication.ts  test_edge_cases.ts  test_errors.ts  test_helper.ts  test_input_types.ts  test_properties.ts  test_runner.test.ts
crates/php-bindings/: Cargo.toml  composer.json  pest.php
crates/php-bindings-gpu/: Cargo.toml  composer.json  pest.php
crates/python-bindings/: .gitignore  Cargo.toml  README.md  llms.txt  pgo_profile.py  pyproject.toml
crates/python-bindings-gpu/: .gitignore  Cargo.toml  pgo_profile.py  pyproject.toml
crates/python-bindings-gpu/python/modern_colorthief_gpu/: __init__.py  __init__.pyi
crates/python-bindings-gpu/src/: lib.rs
crates/python-bindings-gpu/tests/: test_gpu_api.py
crates/python-bindings/examples/: benchmark.py  test.py
crates/python-bindings/python/modern_colorthief/: __init__.py  _modern_colorthief.pyi
crates/python-bindings/src/: lib.rs
crates/python-bindings/tests/: test_api.py  test_cli.py  test_cli_helper.py  test_concurrent.py  test_deduplication.py  test_edge_cases.py  test_input_types.py  test_multithread.py  test_path.py  test_version.py
crates/ruby-bindings/: Cargo.toml  Gemfile  Rakefile  llms.txt  modern_colorthief.gemspec  spec_helper.rb
crates/ruby-bindings-gpu/: .gitignore  Cargo.toml  Gemfile  Rakefile  modern_colorthief_gpu.gemspec  spec_helper.rb
crates/ruby-bindings-gpu/ext/: Cargo.toml  build.rs  extconf.rb
crates/ruby-bindings-gpu/ext/src/: lib.rs
crates/ruby-bindings/ext/: Cargo.toml  build.rs  extconf.rb
crates/ruby-bindings/ext/src/: lib.rs
crates/wasm-bindings/: .gitignore  Cargo.toml  llms.txt  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.chrome.config.js  vitest.config.js  vitest.firefox.config.js
crates/wasm-bindings-gpu/: Cargo.toml  package-lock.json  package.json  test-webgpu-setup.mjs  vite.config.ts  vitest.chrome.config.js  vitest.config.js  webdriver.json
crates/wasm-bindings-gpu/src/: lib.rs
crates/wasm-bindings-gpu/tests/: browser.test.js  node.test.js  wasm_gpu.test.js  web.rs
crates/wasm-bindings-webgpu/: .gitignore  .npmrc  Cargo.toml  package-lock.json  package.json  test-webgpu-setup.cjs  vite.config.ts
crates/wasm-bindings/__tests__/: api.test.ts
crates/wasm-bindings/examples/: test.js
crates/wasm-bindings/src/: lib.rs
crates/wasm-bindings/tests/: browser.test.js  node.test.js  test_decode_image.js  test_real_images.js  wasm.test.js  web.rs
docs/: CHANGELOG.md  api.md  api.rst  api_differences.md  api_differences.rst  api_multilang.rst  benchmarks.md  benchmarks.rst  cli.md  cli.rst  conf.py  differences.md  differences.rst  index.rst  installation.md  installation.rst  license.rst  llm.rst  llms-full.txt  llms-php.txt  llms-wasm.txt  llms.txt  mmcq.rst  parity.md  roadmaps.md  roadmaps.rst  usage.md  usage.rst  wasm-api.md  webassembly.rst
docs/_static/: custom.css
examples/: test.py  test_time.py
fuzz/: Cargo.toml  README.md  build.rs
fuzz/fuzz_targets/: color_extract.rs  cpu_gpu_consistency.rs  palette_extract.rs
logs_73096520650/: 1_Bun.txt
logs_extracted/: 0_Ruby GPU build.txt  1_Node.js 22.txt  2_Deno.txt  3_Bun.txt  4_Build node bindings.txt
logs_latest/: 1_Node.js 22.txt  2_Deno.txt  2_Node.js 22.txt  3_Bun.txt  3_Deno.txt  4_Build node bindings.txt
logs_ruby/: 1_Ruby build.txt
modern_colorthief/: __init__.py  _constants.py  cmap.py  mmcq.py  pqueue.py  vbox.py
src/: lib.rs
tests/: test_cli.py  test_deduplication.py  test_errors.py  test_modern_colortheif_with_colorthief.py  test_path.py  test_properties.py  test_version.py
(+187 files in other folders)
