[workspace]
members = [
    "crates/core",
    "crates/core_cpu",
    "crates/core_gpu",
    "crates/python-bindings",
    "crates/wasm-bindings",
    "crates/node-bindings",
    "crates/jvm-bindings",
    "crates/ruby-bindings",
    "crates/python-bindings-gpu",
    "crates/node-bindings-gpu",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace.dependencies]
modern-colorthief-core = { path = "crates/core" }
modern-colorthief-core-cpu = { path = "crates/core_cpu" }
modern-colorthief-core-gpu = { path = "crates/core_gpu" }
rayon = "1.10"

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
strip = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
