[workspace]
members = [
    "crates/core",
    "crates/core_cpu",
    "crates/core_gpu",
    "crates/python-bindings",
    "crates/wasm-bindings",
    "crates/wasm-bindings-gpu",
    "crates/node-bindings",
    "crates/node-bindings-gpu",
    "crates/jvm-bindings",
    "crates/jvm-bindings-gpu",
    "crates/php-bindings",
    "crates/php-bindings-gpu",
    "crates/python-bindings-gpu",
    "crates/ruby-bindings/ext",
    "crates/ruby-bindings-gpu/ext",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
modern-colorthief-core = { path = "crates/core" }
modern-colorthief-core-cpu = { path = "crates/core_cpu" }
modern-colorthief-core-gpu = { path = "crates/core_gpu" }

# Parallelism
rayon = "1.10"

# Python bindings
pyo3 = { version = "0.28", features = ["abi3-py39"] }

# Node.js bindings
napi = { version = "3.1", features = ["full"] }
napi-derive = "3"
napi-build = "2"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlImageElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "Blob", "Url", "console"] }

# JVM bindings
jni = "0.21"

# Ruby bindings
magnus = "0.8"
rb-sys = "0.9"

# PHP bindings
ext-php-rs = "0.15"

# GPU
ash = "0.38"

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
strip = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
