[project]
name = "modern_colorthief"
authors = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
requires-python = ">3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/baseplate-admin/modern_colorthief"
documentation = "https://modern-colorthief.readthedocs.io"
repository = "https://github.com/baseplate-admin/modern_colorthief"

[project.scripts]
modern-colorthief = "modern_colorthief.cli:main"


[dependency-groups]
build = ["maturin>=1.11.5"]
docs = [
    "shibuya>=2024.6.23,<2026.0.0",
    "myst-parser>=3.0.1,<4",
    "sphinx>=7.3.7,<8",
]
test = [
    "colorthief>=0.2.1,<0.3",
    "pytest>=8.2.1,<9",
]

[tool.uv]
package = true
default-groups = ["docs", "test"]


[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src/python"
module-name = "modern_colorthief._modern_colorthief"
