[project]
name = "modern_colorthief-workspace"
version = "0.3.0"
requires-python = ">3.10"

[dependency-groups]
docs = ["shibuya>=2025.10.21", "sphinx-copybutton>=0.5.2", "sphinx>=7.3.7"]
bench = ["fast-colorthief>=0.0.5", "colorthief>=0.2.1", "tabulate>=0.9.0"]

[tool.uv.workspace]
members = ["crates/python-bindings"]
