[project]
name = "modern_colorthief-workspace"
version = "0.3.0"
requires-python = ">3.10"

[dependency-groups]
docs = ["shibuya>=2025.10.21", "sphinx-copybutton>=0.5.2", "sphinx>=7.3.7"]
bench = ["fast-colorthief>=0.0.5", "colorthief>=0.2.1", "tabulate>=0.9.0"]

[tool.uv.workspace]
members = ["crates/python-bindings"]

[tool.semantic_release]
version_toml = [
    "Cargo.toml:workspace.package.version",
    "pyproject.toml:project.version",
]
version_variables = [
    "crates/node-bindings/package.json:$.version",
    "crates/node-bindings-gpu/package.json:$.version",
    "crates/node-bindings-wasm/package.json:$.version",
    "crates/wasm-bindings/package.json:$.version",
    "crates/wasm-bindings-webgpu/package.json:$.version",
]
changelog_file = "docs/CHANGELOG.md"
build_uri = "https://github.com/baseplate-admin/modern_colorthief/actions/runs/{close}"
repository_url = "https://github.com/baseplate-admin/modern_colorthief"
tag_format = "{version}"

[tool.semantic_release.branch]
main = {"match": "master", "prerelease_token": "rc", "prerelease": false}

[tool.semantic_release.commit_parser.allowable_tags]
tags = ["feat", "fix", "perf", "refactor", "style", "test", "docs", "build", "ci", "chore"]

[tool.semantic_release.commit_parser.type_filters]
major = {"is_breaking": true, "increment": true}
minor = {"is_breaking": false, "increment": true, "select": ["feat", "refactor", "perf"]}
patch = {"is_breaking": false, "increment": true, "select": ["fix", "build", "ci"]}
none = {"is_breaking": false, "increment": false, "select": ["style", "test", "docs", "chore"]}

[tool.semantic_release.git]
name = "modern_colorthief-release"
email = "github-actions[bot]@users.noreply.github.com"
keep_tag_history = false
tag = true
push = true
commit = true

[tool.semantic_release.publish]
enabled = false

[tool.semantic_release.github_release]
enabled = true
