[package]
name = "modern-colorthief-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
modern-colorthief-core-cpu = { path = "../crates/core_cpu" }
modern-colorthief-core-gpu = { path = "../crates/core_gpu" }

[[bin]]
name = "color_extract"
path = "fuzz_targets/color_extract.rs"
test = false
doc = false

[[bin]]
name = "palette_extract"
path = "fuzz_targets/palette_extract.rs"
test = false
doc = false

[[bin]]
name = "cpu_gpu_consistency"
path = "fuzz_targets/cpu_gpu_consistency.rs"
test = false
doc = false

[workspace]
