[package]
name = "modern-colorthief-core-webgpu"
version.workspace = true
edition.workspace = true

[dependencies]
modern-colorthief-core = { workspace = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
js-sys.workspace = true
web-sys = { workspace = true, features = ["console"] }

[build-dependencies]
naga = { version = "30", default-features = false, features = ["wgsl-in"] }
serde_json = "1"
swc_common = "24.0.0"
swc_ecma_codegen = "29.0.0"
swc_ecma_minifier = "58.0"
swc_ecma_parser = "42.0.0"
swc_ecma_transforms_typescript = "52.0.0"
swc_ecma_utils = "32.0.0"
swc_ecma_visit = "26.0.0"

[features]
