[package]
name = "modern-colorthief-node-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
modern-colorthief-core-cpu.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
js-sys.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
