[project]
name = "modern_colorthief"
authors = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
requires-python = ">3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/baseplate-admin/modern_colorthief"
documentation = "https://modern-colorthief.readthedocs.io"
repository = "https://github.com/baseplate-admin/modern_colorthief"

[project.scripts]
modern-colorthief = "modern_colorthief.cli:main"

[dependency-groups]
dev = ["maturin>=1.11.5"]
test = ["pytest>=8.2.1"]
bench = ["fast-colorthief>=0.0.5", "colorthief>=0.2.1"]

[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "modern_colorthief._modern_colorthief"

[tool.maturin.generate-ci.github]
platforms = ["manylinux", "musllinux", "windows", "macos", "android"]
