[project]
name = "modern_colorthief"
authors = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
requires-python = ">3.10"
readme = "README.md"
dependencies = ["Pillow>=10.0.0"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/baseplate-admin/modern_colorthief"
documentation = "https://modern-colorthief.readthedocs.io"
repository = "https://github.com/baseplate-admin/modern_colorthief"

[project.scripts]
modern-colorthief = "modern_colorthief.cli:main"

[dependency-groups]
dev = ["maturin>=1.11.5"]
test = ["pytest>=8.2.1"]

[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "modern_colorthief._modern_colorthief"
pgo-command = "python -c \"from modern_colorthief import get_color, get_palette; from PIL import Image; img = Image.new('RGB', (100, 100), color=(200, 100, 50)); get_palette(img, 5); get_color(img)\""
