[package]
name = "modern-colorthief-wasm-gpu"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
modern-colorthief-core-wasm = { workspace = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
js-sys.workspace = true
web-sys.workspace = true

[features]
node-tests = ["modern-colorthief-core-wasm/node-tests"]
browser-tests = []

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
