[package]
name = "colorthief-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
colorthief-core.workspace = true
color-thief.workspace = true
itertools.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
