[package]
name = "colorthief-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
colorthief-core.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlDocument",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Node",
    "CanvasRenderingContext2d",
    "ImageData",
    "Blob",
    "Url",
] }
[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
