[package]
name = "modern_colorthief_gpu"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
modern-colorthief-core-gpu = { path = "../../core_gpu" }
magnus = "0.8"
rb-sys.workspace = true

# See: https://oxidize-rb.org/docs/api-reference/test-helpers
[dev-dependencies]
rb-sys-env = "0.9"
rb-sys-test-helpers = "0.3"
