[package]
name = "modern_colorthief_gpu"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
modern-colorthief-core-gpu = { path = "../../core_gpu" }
magnus = "0.8"
rb-sys.workspace = true

# See: https://oxidize-rb.org/docs/testing
# Rust unit tests are covered by RSpec; dev-dependencies removed to avoid resolution failures
