[package]
name = "modern_colorthief"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
modern-colorthief-core-cpu = { path = "../../core_cpu" }
magnus = "0.8"
rb-sys.workspace = true

# See: https://oxidize-rb.org/docs/api-reference/rb-sys-features
# gc-stress wraps all Ruby C API calls with rb_gc_start() to detect memory safety bugs
[features]
gc-stress = ["rb-sys/gc-stress"]

# See: https://oxidize-rb.org/docs/api-reference/test-helpers
[dev-dependencies]
rb-sys-env = "0.9"
rb-sys-test-helpers = "0.3"
